fix(About Page): make cube appear smaller and words readable in smaller screens

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -8,6 +8,11 @@
     right: 0;
     overflow: hidden;
 
+    @media only screen and (max-width: 1200px) {
+        padding-top: 0;
+        position: static;
+    }
+
     div {
         position: absolute;
         width: 200px;
@@ -19,6 +24,11 @@
         justify-content: center;
         align-items: center;
         box-shadow: 0 0 20px 0px lightyellow;
+
+        @media only screen and (max-height: 700px) {
+            width: 150px;
+            height: 150px;
+        }
     }
 
     .side1 {
