--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -50,6 +50,10 @@
         max-height: 90%;
         margin-left: 50px;
 
+        @media only screen and (max-width: 1200px) {
+            width:70vw;
+        }
+
         h1 {
             font-size: 80px;
             font-family: 'Coolvetica', serif;
@@ -61,19 +65,11 @@
             left: 10px;
 
             @media only screen and (max-width: 1200px) {
-                font-size: 50px;
-            }
-
-            @media only screen and (max-width: 805px) {
                 font-size: 40px;
             }
 
-            @media only screen and (max-width: 660px) {
-                font-size: 30px;
-            }
-
-            @media only screen and (max-width: 600px) {
-                font-size: 20px;
+            @media only screen and (max-width: 380px) {
+                font-size: 38px;
             }
 
             &::before {
